# salmon

./: CMakeLists.txt  README.md  install-lin.sh  salmon
include/: audio_capture.h  detectors.h  hann_window.h  kalman_smoother.h  music.h  raw_term.h  ring_buffer.h  tuner_state.h  tuning_registry.h
src/: audio_capture.cpp  detectors.cpp  hann_window.cpp  kalman_smoother.cpp  main.cpp  music.cpp  raw_term.cpp  tuner_state.cpp  tuning_registry.cpp
